--- a/analysis/_site.yml
+++ b/analysis/_site.yml
@@ -12,7 +12,7 @@ navbar:
   right:
   - icon: fa-github
     text: Source code
-    href: https://github.com/daiuc/lab3updates
+    href: https://github.com/lab3updates/lab3updates
 output:
   workflowr::wflow_html:
     toc: yes
